# FreezeLogger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  freeze-detector.code-workspace  vcpkg.json
analysis/: addrlib_lookup.py  addrlib_quicklookup.py  addrlib_results.txt  cdb_pass1.cmd  cdb_registers.cmd  disasm_chain.txt  disasm_locks.txt  disasm_targets.py  disasm_targets.txt  dump_at_rva.py  dump_lockb_funcs.py  dump_one_func.py  enumerate_imports.py  enumerate_writes.py  find_all_lockb_callers.py  find_back_edges.py  find_bsspinlock_release.py  find_callers.py  find_constructor.py  find_pending_setevent.py  find_pending_setevent.txt  find_singleton_base.py  fingerprint_form_types.py  gen_callsites_g_inc.py  gen_callsites_inc.py  ghidra_import.log.err  id_to_rva.py  match_vtable.py  out_enumerate_writes.txt  out_find_back_edges_direct.txt  out_find_back_edges_vt.txt  out_find_back_edges_vtables.txt  out_find_callers.txt  out_find_constructor.txt  out_find_singleton_base.txt  out_fingerprint_form_types.txt  out_id19369.txt  out_id19369_full.txt  out_id19371.txt  out_id19371_full.txt  (+45 more)
dist-test/: FreezeLogger.toml
docs/: ghidra-bring-up.md  spec.md
docs/case-study/: 01-overview.md  02-tools.md  03-timeline.md  04-plugin-evolution.md  05-static-analysis.md  06-root-cause.md  07-discarded-hypotheses.md  08-mitigation.md  09-lessons-learned.md  10-future-approaches.md  11-worker-spinlockfix-retrospective.md  12-engine-fix-mod-audit.md  13-rethought-solution.md  14-final-design-v1.md  15-v2-structural-strategy.md  16-v2-phase1-singletons.md  17-v2-phase1-5-findings.md  18-v2-phase2-cycle-paths.md  19-v2-phase3-mutations-and-form-types.md  20-v2-phase3-5-findings.md  21-v2-phase4-prep-dispatch-decode.md  22-v2-phase4-1-cycle-hub-characterisation.md  23-v2-release.md  24-v2-0-1-skyshard-regression-fix.md  25-v2-0-1-callsite-refactor.md  26-reaper-snapshot-removed.md  27-hdtsmp-deadlock-report.md  README.md  appendix-A-evidence.md
packaging/: make_release.ps1
skyrim-freeze-fix/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
skyrim-freeze-fix/dist-out/: WorkerSpinLockFix_v0.1.0.rar  WorkerSpinLockFix_v0.2.0.rar  WorkerSpinLockFix_v0.3.0.rar  WorkerSpinLockFix_v0.4.0.rar
skyrim-freeze-fix/docs/: design.md
skyrim-freeze-fix/packaging/: make_release.ps1
skyrim-freeze-fix/src/: AcquireHook.cpp  AcquireHook.h  Breaker.cpp  Breaker.h  CallSites.inc  CallSites_G.inc  Config.cpp  Config.h  Hooks.cpp  Hooks.h  Logger.cpp  Logger.h  PCH.h  Phase4Defer.cpp  Phase4Defer.h  Reaper.cpp  Reaper.h  Stats.cpp  Stats.h  TestMode.cpp  TestMode.h  WaitGraph.cpp  WaitGraph.h  main.cpp
src/: AddrLib.cpp  AddrLib.h  Config.cpp  Config.h  DebugTriggers.cpp  DebugTriggers.h  Heartbeat.h  Logger.cpp  Logger.h  MainHook.cpp  MainHook.h  PCH.h  PapyrusLogTap.cpp  PapyrusLogTap.h  RenderHook.cpp  RenderHook.h  Reporter.cpp  Reporter.h  RingBuffer.cpp  RingBuffer.h  SkseMessageTap.cpp  SkseMessageTap.h  Symbols.cpp  Symbols.h  TaskPoolBaseline.cpp  TaskPoolBaseline.h  Watchdog.cpp  Watchdog.h  main.cpp
src/snapshot/: AnimGraph.cpp  AnimGraph.h  Engine.cpp  Engine.h  MainWaitProbe.cpp  MainWaitProbe.h  MiniDump.cpp  MiniDump.h  Modules.cpp  Modules.h  Papyrus.cpp  Papyrus.h  System.cpp  System.h  TaskPool.cpp  TaskPool.h  Threads.cpp  Threads.h  Verdict.cpp  Verdict.h  WaitGraph.cpp  WaitGraph.h
tests/: CMakeLists.txt  test_heartbeat.cpp  test_main.cpp  test_ringbuffer.cpp  test_watchdog_classify.cpp
tools/ghidra/: FindFunctionAtRva.java  find_present_callers.py  resolve_offsets.py
